# Experimental-2D-Engine

./: .gitignore  .travis.yml  CMakeLists.txt  GOALS.md  README.md  app.cpp  build.sh  circle.yml
assets/shaders/: test.frag  test.vert
doc/: Doxyfile
include/: actor.hpp  collision_result.hpp  component.hpp  component_ref.hpp  entity.hpp  entity_ref.hpp  errors.hpp  game_grid.hpp  message.hpp  mrb_wrapper.hpp  physics_body.hpp  physics_system.hpp  physics_world.hpp  player.hpp  polygon.hpp  position.hpp  scene.hpp  script_engine.hpp  sym.hpp  test.hpp  util.hpp  vector.hpp  window.hpp  world.hpp
include/render/: gl_include.hpp  gl_program.hpp  gl_texture.hpp  sprite_sheet.hpp
src/: actor.cpp  collision_result.cpp  component.cpp  component_ref.cpp  entity.cpp  entity_ref.cpp  game_grid.cpp  message.cpp  physics_body.cpp  physics_system.cpp  physics_world.cpp  polygon.cpp  position.cpp  scene.cpp  script_engine.cpp  sym.cpp  test.cpp  util.cpp  vector.cpp  window.cpp  world.cpp
src/render/: gl_program.cpp  gl_texture.cpp  sprite_sheet.cpp
test/: actor_test.cpp  main.cpp  mrb_wrapper.cpp  player_test.cpp  polygon_test.cpp  position_test.cpp  test_util.cpp  vector_test.cpp
test/render/: sprite_sheet_test.cpp
